--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "remotion": "^3.3.101",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
